# pymechanical-mcp

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  codecov.yml  index.html  pyproject.toml  robots.txt  start_mechanical.sh  test_e2e.py  versions.json
.ci/: collect_logs.sh  start_mechanical.sh  wait_for_mechanical.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt  start.sh  welcome.rst
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  examples.yml  feature.yml
.github/workflows/: ci.yml  integration.yml  label.yml
doc/: .vale.ini  Makefile  make.bat
doc/changelog.d/: 16.added.md  24.dependencies.md  25.documentation.md  26.fixed.md  28.maintenance.md  29.documentation.md  30.maintenance.md  40.added.md  42.dependencies.md  43.dependencies.md  44.dependencies.md  45.dependencies.md
doc/source/: changelog.rst  conf.py  index.rst  links.rst
doc/source/api/: index.rst
doc/source/contributing/: index.rst
doc/source/examples/: bracket_modal.rst  cantilever_beam.rst  examples_gallery.rst  implementing_a_tool.rst  index.rst  plate_with_hole.rst  usage_examples.rst  usage_examples_videos.rst
doc/source/examples/workflows/: bracket_modal.rst  cantilever_beam.rst  plate_with_hole.rst
doc/source/getting_started/: contribution.rst  ide_configuration.rst  index.rst  installation.rst  quick_start.rst
doc/source/user_guide/: best_practices.rst  configuration.rst  docker.rst  index.rst  overview.rst  tools_and_capabilities.rst
doc/styles/: .gitignore  typos.toml
doc/styles/config/vocabularies/ANSYS/: accept.txt
docker/: .dockerignore  .env  Dockerfile  docker-compose.yml  env.example
examples/: generate_geometry.py  static_structural_workflow.md
examples/bracket_modal/: bracket.step  prompt.md
examples/cantilever_beam/: beam.step  prompt.md
examples/plate_with_hole/: plate.step  prompt.md
src/ansys/mechanical/mcp/: __init__.py  __main__.py  contexts.py  helpers.py  prompts.py  server.py  tools.py  toolsets.py
src/ansys/mechanical/mcp/mechanical_helper/: __init__.py  startup_code.py
tests/: __init__.py  conftest.py  test_basic.py  test_cli.py  test_contexts.py  test_error_handling.py  test_helpers_additional.py  test_integration.py  test_lifespan.py  test_log_tools.py  test_main.py  test_mcp_protocol.py  test_python_session_tools.py  test_tools.py  test_toolsets.py  test_transport_mode.py
version/: index.html
version/0.1/: changelog.html  index.html  py-modindex.html  search.html
version/0.1/_sources/: changelog.rst.txt
version/0.1/_sources/api/: index.rst.txt
version/0.1/_sources/examples/: implementing_a_tool.rst.txt
version/0.1/_sources/examples/workflows/: cantilever_beam.rst.txt
version/0.1/_sources/getting_started/: ide_configuration.rst.txt
version/0.1/_static/: search.json
version/0.1/api/ansys/mechanical/mcp/__main__/: index.html
version/0.1/api/ansys/mechanical/mcp/contexts/: index.html
version/0.1/api/ansys/mechanical/mcp/helpers/: index.html
version/0.1/api/ansys/mechanical/mcp/prompts/: index.html
version/0.1/api/ansys/mechanical/mcp/server/: PyMechanicalAppContext.html
version/0.1/api/ansys/mechanical/mcp/toolsets/: index.html
version/0.1/contributing/: index.html
version/0.1/examples/: implementing_a_tool.html  index.html
version/0.1/examples/workflows/: cantilever_beam.html  usage_examples_index.html
version/0.1/getting_started/: ide_configuration.html  index.html  installation.html
version/0.1/user_guide/: index.html  overview.html  tools_and_capabilities.html
version/dev/: changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/_sources/api/ansys/mechanical/mcp/: index.rst.txt
version/dev/_sources/contributing/: index.rst.txt
version/dev/_sources/examples/workflows/: usage_examples_index.rst.txt
version/dev/_sources/getting_started/: quick_start.rst.txt
version/dev/_sources/user_guide/: overview.rst.txt  tools_and_capabilities.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/api/ansys/mechanical/mcp/: index.html
version/dev/api/ansys/mechanical/mcp/__main__/: index.html
version/dev/api/ansys/mechanical/mcp/contexts/: index.html
version/dev/api/ansys/mechanical/mcp/helpers/: index.html
version/dev/api/ansys/mechanical/mcp/mechanical_helper/: index.html
version/dev/api/ansys/mechanical/mcp/prompts/: index.html
version/dev/api/ansys/mechanical/mcp/server/: PyMechanicalAppContext.html  PyMechanicalMCP.html  SessionContext.html  index.html
version/dev/api/ansys/mechanical/mcp/tools/: index.html
version/dev/api/ansys/mechanical/mcp/toolsets/: index.html
version/dev/contributing/: index.html
version/dev/examples/: implementing_a_tool.html  index.html
version/dev/examples/workflows/: bracket_modal.html  cantilever_beam.html  plate_with_hole.html  usage_examples_index.html
version/dev/getting_started/: contribution.html  ide_configuration.html  index.html  installation.html  quick_start.html
version/dev/user_guide/: best_practices.html  configuration.html  docker.html  index.html  overview.html  tools_and_capabilities.html
version/stable/: genindex.html  index.html  objects.inv  searchindex.js
version/stable/_sources/examples/workflows/: bracket_modal.rst.txt
version/stable/_sources/getting_started/: contribution.rst.txt
version/stable/api/: index.html
version/stable/api/ansys/mechanical/mcp/: index.html
version/stable/api/ansys/mechanical/mcp/mechanical_helper/: index.html
version/stable/api/ansys/mechanical/mcp/server/: PyMechanicalMCP.html  SessionContext.html  index.html
version/stable/api/ansys/mechanical/mcp/tools/: index.html
version/stable/examples/workflows/: bracket_modal.html  plate_with_hole.html
version/stable/getting_started/: contribution.html  quick_start.html
version/stable/user_guide/: best_practices.html  configuration.html  docker.html
(+15 files in other folders)
