[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-mechanical-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Ansys Mechanical through PyMechanical"
readme = "README.md"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [
    { name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }
]
maintainers = [
    { name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }
]
keywords = [
    "ansys",
    "mechanical",
    "pymechanical",
    "mcp",
    "model-context-protocol",
    "ai",
    "assistant",
    "finite-element-analysis",
    "structural-analysis",
    "simulation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "ansys-mechanical-core>=0.12.0",
    "fastmcp>=3.2.0,<4.0",
    "ansys-common-mcp>=0.3.0",
    "matplotlib>=3.5.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
tests = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

doc = [
    "ansys-sphinx-theme[changelog]==1.8.2",
    "numpydoc==1.10.0",
    "sphinx-autodoc-typehints==3.1.0",
    "sphinx-design>=0.5.0",
    "sphinx-notfound-page==1.1.0",
    "sphinx==8.2.3",
]

dev = [
    "ansys-mechanical-mcp[tests,doc]",
    "pre-commit>=3.5.0",
    "ruff>=0.11.0",
    "mypy>=1.8.0",
    "bandit[toml]>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/ansys/pymechanical-mcp"
Documentation = "https://mechanical-mcp.docs.pyansys.com"
Repository = "https://github.com/ansys/pymechanical-mcp"
Issues = "https://github.com/ansys/pymechanical-mcp/issues"

[project.scripts]
ansys-mechanical-mcp = "ansys.mechanical.mcp.__main__:launcher"

[tool.flit.module]
name = "ansys.mechanical.mcp"

[tool.ruff]
line-length = 100
fix = true
format.indent-style = "space"
format.quote-style = "double"
lint.select = [
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
    "PTH", # flake8-use-pathlib
    "TD",  # flake8-todos
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D401", # First line of docstring should be in imperative mood
    "TD002", # Missing author in TODO comments
]
lint.per-file-ignores."!src/**.py" = [ "D" ]
lint.per-file-ignores."__init__.py" = [ "F401" ]
lint.per-file-ignores."tests/**.py" = [ "D", "E501", "N806" ]
lint.isort.combine-as-imports = true
lint.isort.force-sort-within-sections = true
lint.isort.known-first-party = [ "ansys.mechanical.mcp" ]
lint.pydocstyle.convention = "numpy"

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
exclude = [
    "^\\.venv/",
    "^venv/",
    "^build/",
    "^dist/",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--cov=ansys.mechanical.mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests that don't require Mechanical",
    "integration: Integration tests that require Mechanical connection",
    "slow: Tests that take a long time to run",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used in tests


[tool.uv]
# Ensure dependencies are resolved from PyPI first, not internal indexes
# This prevents version conflicts when users have internal PyPI indexes configured
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
