[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-mechanical-mcp"
version = "0.1.dev0"
description = "Model Context Protocol (MCP) server for Ansys Mechanical through PyMechanical"
readme = "README.md"
requires-python = ">=3.11,<4"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }
]
maintainers = [
    { name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }
]
keywords = [
    "ansys",
    "mechanical",
    "pymechanical",
    "mcp",
    "model-context-protocol",
    "ai",
    "assistant",
    "finite-element-analysis",
    "structural-analysis",
    "simulation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "ansys-mechanical-core>=0.12.0",
    "ansys-common-mcp>=0.3.0",
    "matplotlib==3.11.0",
    "tabulate==0.10.0",
]

[project.optional-dependencies]
tests = [
    "ansys-common-mcp==0.3.2",
    "ansys-mechanical-core==0.12.10",
    "matplotlib==3.11.0",
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "tabulate==0.10.0",
]

doc = [
    "ansys-common-mcp==0.3.2",
    "ansys-mechanical-core==0.12.10",
    "ansys-sphinx-theme[autoapi,changelog]==1.8.2",
    "matplotlib==3.11.0",
    "numpydoc==1.10.0",
    "sphinx-autodoc-typehints==3.6.1",
    "sphinx-design==0.7.0",
    "sphinx-notfound-page==1.1.0",
    "tabulate==0.10.0",
]

dev = [
    "ansys-mechanical-mcp[tests,doc]",
    "pre-commit>=3.5.0",
    "ruff>=0.11.0",
    "mypy>=1.8.0",
    "bandit[toml]>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/ansys/pymechanical-mcp"
Documentation = "https://mechanical-mcp.docs.pyansys.com"
Repository = "https://github.com/ansys/pymechanical-mcp"
Issues = "https://github.com/ansys/pymechanical-mcp/issues"

[project.scripts]
ansys-mechanical-mcp = "ansys.mechanical.mcp.__main__:launcher"

[tool.flit.module]
name = "ansys.mechanical.mcp"

[tool.ruff]
line-length = 100
fix = true
format.indent-style = "space"
format.quote-style = "double"
lint.select = [
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "PTH", # flake8-use-pathlib
  "TD",  # flake8-todos
]
lint.ignore = [
  "TD002", # Missing author in TODO comments
]
lint.per-file-ignores."!src/**.py" = [ "D" ]
lint.per-file-ignores."__init__.py" = [ "F401" ]
lint.per-file-ignores."tests/**.py" = [ "D", "E501", "N806" ]
lint.isort.combine-as-imports = true
lint.isort.force-sort-within-sections = true
lint.isort.known-first-party = [ "ansys.mechanical.mcp" ]
lint.pydocstyle.convention = "numpy"

[tool.mypy]
python_version = "3.14"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
exclude = [
    "^\\.venv/",
    "^venv/",
    "^build/",
    "^dist/",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--cov=ansys.mechanical.mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests that don't require Mechanical",
    "integration: Integration tests that require Mechanical connection",
    "slow: Tests that take a long time to run",
]

[tool.uv]
# Ensure dependencies are resolved from PyPI first, not internal indexes
# This prevents version conflicts when users have internal PyPI indexes configured
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.towncrier]
package = "ansys.mechanical.mcp"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
template = "doc/changelog.d/changelog_template.jinja"
start_string = ".. towncrier release notes start\n"
title_format = "`{version} <https://github.com/ansys/pymechanical-mcp/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/pymechanical-mcp/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true
